@@ -107,7 +107,6 @@ DRIVER_SOURCES = \
 	$(DRIVER_SRC_DIR)/Generic.cpp \
 	$(DRIVER_SRC_DIR)/LevilAHRS_G.cpp \
 	$(DRIVER_SRC_DIR)/Leonardo.cpp \
-	$(DRIVER_SRC_DIR)/GTAltimeter.cpp \
 	$(DRIVER_SRC_DIR)/NmeaOut.cpp \
 	$(DRIVER_SRC_DIR)/OpenVario.cpp \
 	$(DRIVER_SRC_DIR)/PosiGraph.cpp \
