@@ -12,7 +12,6 @@ FLARM                & \y &   & \y  &    &    & \y &    &    \\
 %                    _Decl_Remo_Down_Airs_Vari_Baro_Wind_Gsen_
 Flymaster F1         &    &    &    &    & \y & \y &    &    \\
 Flytec 5030          &    &    &    & \y & \y &    &    &    \\
-GTAltimeter          &    &    &    &    &(\y)& \y &    &    \\
 ILEC SN10            &    &    &    &    & \y & \y & \y &    \\
 \hline
 IMI ERIXX            & \y &    & \y &    &    &    &    &    \\
