@@ -34,7 +34,6 @@
 #include "Device/Driver/FlymasterF1.hpp"
 #include "Device/Driver/FlyNet.hpp"
 #include "Device/Driver/Flytec.hpp"
-#include "Device/Driver/GTAltimeter.hpp"
 #include "Device/Driver/LevilAHRS_G.hpp"
 #include "Device/Driver/Leonardo.hpp"
 #include "Device/Driver/LX.hpp"
@@ -275,44 +274,6 @@ TestAltairRU()
   ok1(nmea_info.engine_noise_level == 342);
   ok1(nmea_info.voltage_available);
   ok1(equals(nmea_info.voltage, 12.743));
-}
-
-static void
-TestGTAltimeter()
-{
-  NullPort null;
-  Device *device = gt_altimeter_driver.CreateOnPort(dummy_config, null);
-  ok1(device != NULL);
-
-  NMEAInfo nmea_info;
-  nmea_info.Reset();
-  nmea_info.clock = fixed(1);
-
-  ok1(device->ParseNMEA("$LK8EX1,99545,149,1,26,5.10*18", nmea_info));
-  ok1(nmea_info.static_pressure_available);
-  ok1(equals(nmea_info.static_pressure.GetHectoPascal(), 995.45));
-  ok1(!nmea_info.pressure_altitude_available);
-  ok1(nmea_info.noncomp_vario_available);
-  ok1(equals(nmea_info.noncomp_vario, 0.01));
-  ok1(nmea_info.temperature_available);
-  ok1(equals(nmea_info.temperature, 26));
-  ok1(!nmea_info.battery_level_available);
-  ok1(nmea_info.voltage_available);
-  ok1(equals(nmea_info.voltage, 5.1));
-
-  nmea_info.Reset();
-  nmea_info.clock = fixed(1);
-
-  ok1(device->ParseNMEA("$LK8EX1,999999,149,-123,,1076,*32", nmea_info));
-  ok1(!nmea_info.static_pressure_available);
-  ok1(nmea_info.pressure_altitude_available);
-  ok1(equals(nmea_info.pressure_altitude, 149));
-  ok1(nmea_info.noncomp_vario_available);
-  ok1(equals(nmea_info.noncomp_vario, -1.23));
-  ok1(!nmea_info.temperature_available);
-  ok1(nmea_info.battery_level_available);
-  ok1(equals(nmea_info.battery_level, 76));
-  ok1(!nmea_info.voltage_available);
 }
 
 static void
@@ -1491,13 +1452,12 @@ TestFlightList(const struct DeviceRegister &driver)
 
 int main(int argc, char **argv)
 {
-  plan_tests(783);
+  plan_tests(761);
 
   TestGeneric();
   TestTasman();
   TestFLARM();
   TestAltairRU();
-  TestGTAltimeter();
   TestBlueFly();
   TestBorgeltB50();
   TestCAI302();
