@@ -5,6 +5,8 @@ Version 6.8.3 - not yet released
   - use correct "comment" field for OziExplorer files
   - relax file format detection for OziExplorer files
   - fix bogus arrival heights on watched waypoints when GPS unavailable
+* devices
+  - GTAltimeter: remove unmaintained driver (#3661)
 * fix crash in XML parser
 * fix crash in airspace parser
 * fix crash in SkyLines tracking
